@@ -55,3 +55,6 @@ FrmMain: Replace feature list with feature grid (from FeatureAdmin2007)
   Copy over classes FeatureDatabase.cs, GridColMgr.cs
     FeatureLocationSet.cs, FeatureUninstaller.cs
     FeatureActivator from old version of FeatureAdmin2007
+FeatureDatabase: (Backported from FeatureAdmin2013)
+  More careful exception handling
+  & use feature definition DisplayName when feature definition GetTitle throws exception
